--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="FourthInterviewApp">
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
