Added app controller to set the title of the webapp

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" ng-app="fourthInterviewApp">
+<html lang="en" ng-app="fourthInterviewApp" ng-controller="appCtrl">
 <head>
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jorge Herrera">
 
-    <title>4th Interview</title>
+    <title>{{appTitle}}</title>
 
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
