Updated UI to use Skills instead of Tags

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -19,7 +19,7 @@
             <side-menu>
                 <side-menu-item url="#/candidates" title="Candidates"></side-menu-item>
                 <side-menu-item url="#/questions" title="Questions"></side-menu-item>
-                <side-menu-item url="#/tags" title="Tags"></side-menu-item>
+                <side-menu-item url="#/skills" title="Skills"></side-menu-item>
             </side-menu>
         </div>
         <div class="span9">
