--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-<div header></div>
+<div ng-include="'partials/header.html'"></div>
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span3">
