Changed ng-view to be a <div ng-view...

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -20,7 +20,7 @@
             <div ng-include="'partials/side-menu.html'"></div>
         </div>
         <div class="span9">
-            <ng-view></ng-view>
+            <div ng-view class="container-fluid"></div>
         </div>
     </div>
     <br>
