--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -31,7 +31,7 @@
 </div>
 
 <script src="lib/angular/angular.js"></script>
-<script src="lib/angular/angular-resource.js"></script>
+<script src="lib/angular-ui/ui-bootstrap-0.4.0.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
 <script src="js/controllers.js"></script>
